--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php" : "^7.1.3",
-        "illuminate/support": "~5.6.0|~5.7.0|~5.8.0",
+        "illuminate/support": "^5.6|^6.0",
         "aws/aws-sdk-php": "^3.52"
     },
     "require-dev": {
